# quant-backtesting-validation

./: .gitignore  CONTRIBUTING.md  README.md  app.py  benchmark.py  main.py  next.config.ts  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  tailwind.config.ts  vercel.json
analytics/: __init__.py  metrics.py  significance.py
app/: globals.css  layout.tsx  page.tsx
app/api/backtest/: route.ts
app/api/market-data/: route.ts
backtest/: __init__.py  costs.py  engine.py
components/charts/: equity-chart.tsx
components/metrics/: metric-card.tsx  metrics-grid.tsx
components/ui/: button.tsx  card.tsx  input.tsx  label.tsx  select.tsx  slider.tsx  tabs.tsx
cpp_core/: CMakeLists.txt
cpp_core/include/: monte_carlo.hpp  portfolio.hpp  random_generator.hpp  statistics.hpp
cpp_core/src/: bindings.cpp  monte_carlo.cpp  portfolio.cpp  random_generator.cpp  statistics.cpp
data/: __init__.py  database.py  example_results.json  fetcher.py  sample_portfolio.csv  sample_returns.csv
lib/analytics/: deflated-sharpe.ts  index.ts  metrics.ts  significance.ts  types.ts
lib/backtest/: costs.ts  engine.ts  index.ts  types.ts
lib/data/: fetcher.ts  index.ts  types.ts
lib/math/: index.ts  normal.ts  random.ts  rolling.ts  statistics.ts
lib/strategies/: bollinger-bands.ts  index.ts  momentum.ts  moving-average.ts  pairs-trading.ts  rsi.ts  types.ts
lib/utils/: constants.ts
notebooks/: simulation_analysis.ipynb
python/qss/: __init__.py  analytics.py  interface.py  orchestrator.py  visualization.py
strategies/: __init__.py  base.py  momentum.py  moving_average.py  pairs_trading.py  rsi.py
tests/: conftest.py  test_engine.py  test_metrics.py  test_significance.py  test_strategies.py
todo/: ROADMAP.md
