[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "pybind11>=2.9.0",
    "cmake>=3.15",
]
build-backend = "setuptools.build_meta"

[project]
name = "quantitative-systems-simulator"
version = "0.1.0"
description = "Portfolio Risk, Monte Carlo Simulation, and Statistical Analytics Engine"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Raja Hussain"}
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]
keywords = ["monte-carlo", "simulation", "portfolio", "risk", "var", "finance"]

dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
    "plotly>=5.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=0.900",
    "flake8>=4.0.0",
]
full = [
    "statsmodels>=0.13.0",
    "seaborn>=0.11.0",
    "jupyter>=1.0.0",
    "openpyxl>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/quantitative-systems-simulator"
Documentation = "https://github.com/yourusername/quantitative-systems-simulator#readme"
Repository = "https://github.com/yourusername/quantitative-systems-simulator"

[tool.setuptools.packages.find]
where = ["python"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["qss"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=qss --cov-report=term-missing"
